--- a/task-management-system/src/index.html
+++ b/task-management-system/src/index.html
@@ -72,6 +72,9 @@
       .sidebar-menu {
         margin-top: 1rem;
       }
+      .sidebar-menu ul {
+        margin-top: 100px;
+      }
       .sidebar-menu a {
         padding-left: 2rem;
         display: block;
